Chat bubbles in pre-game screen weren't rendering correctly - remove unwanted gap

--- a/client/Components/Games/PendingGame.scss
+++ b/client/Components/Games/PendingGame.scss
@@ -13,6 +13,10 @@
     padding: 5px 10px;
 }
 
+.message-list .mb-1{
+	margin-bottom: 0 !important;
+}
+
 .game-status {
     margin-top: 10px;
 }
